force-app/main/default/objects/Account_Agency__c.object
<CustomObject>
    <description>Junction Object to relate Client Accounts and Agencies</description>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>Agency__r.Name</formula>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Related_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Split__c</fullName>
        <label>Commission Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agencies</relationshipLabel>
        <relationshipName>Agencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Relationship Effective Date</description>
        <inlineHelpText>Relationship Effective Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Relationship Termination Date</description>
        <inlineHelpText>Relationship Termination Date</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>Account Agency</label>
    <nameField>
        <displayFormat>RN-{00000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>